# sonycam

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  setup.cfg
.cursor/rules/: sonycam.mdc
.cursor/skills/sonycam/: SKILL.md  reference.md
.cursor/skills/sonycam-dev/: SKILL.md  architecture.md
.github/workflows/: ci.yml
Scripts/: agent-session.sh
sonycam/: __init__.py  api.py  cli.py  liveview.py  server.py
