[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sonycam"
version = "0.1.0"
description = "Agent-native CLI for Sony Alpha cameras via Alpha Camera REST API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Brandon Charleson" }]
dependencies = [
  "Pillow>=10.0.0",
]

[project.scripts]
sonycam = "sonycam.cli:main"

[tool.setuptools.packages.find]
include = ["sonycam*"]
